# modulab_004_unstructured-doc-rag

./: PRJ04_W1_001_Unstructured_Intro.ipynb  PRJ04_W1_002_Unstructured_Docling.ipynb  PRJ04_W1_003_Unstructured_LangChain.ipynb  PRJ04_W1_004_Unstructured_RAG_10-K_annual_report.ipynb  PRJ04_W1_005_Docling_RAG_10-K_annual_report.ipynb  PRJ04_W1_005_Docling_RAG_10-K_장승일.ipynb  PRJ04_W1_006_SFT_Tool_Embedding_RunPod[Lecture].ipynb  PRJ04_W2_002_Multimodal_LangChain_CLIP[Lecture].ipynb  PRJ04_W2_004_Multimodal_RAG_Financial_Part1[Lecture].ipynb  PRJ04_W2_005_Multimodal_RAG_Financial_Part2[Lecture].ipynb  PRJ04_W2_006_Multimodal_RAG_Financial_Part3[Lecture].ipynb  PRJ04_W2_007_Multimodal_RAG_ColQwen.ipynb  PRJ04_W3_001_neo4j_intro.ipynb  PRJ04_W3_002_neo4j_LangChain.ipynb  PRJ04_W3_003_neo4j_Build_KnowledgeGraph.ipynb  PRJ04_W3_004_Entity_Extraction_SimpleKGPipeline.ipynb  PRJ04_W3_005_neo4j_10K_GraphRAG.ipynb  README.md  main.py  mm_summaries.pkl  mm_summaries_base64.pkl  pyproject.toml
add_data/legal_documents/: 개인정보보호법.docx  주택임대차보호법.txt
chroma_db/e5bb22e4-041a-4109-beab-27de014616cd/: index_metadata.pickle
data/: .gitignore  docling_tesla_10k_sections.pkl  docling_tesla_10k_sections_split.pkl  docling_tesla_10k_toc_based_docs.pkl  email.eml  kbo_teams_2023.tsv  pdf_base64_chunks.pkl  tesla_10k.pkl  tesla_10k_sections.pkl  tesla_10k_sections_split copy.pkl  tesla_10k_sections_split.pkl  tesla_10k_toc.pkl
data/analyst_reports/: page_summaries.json  pdf_base64_chunks.pkl
data/docling_output/: labor_law.txt  transformer_analysis.md  tsla_analysis_ocr.md  (+1 more)
(+2 files in other folders)
