[project]
name = "004-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.26,<0.30",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.4",
    "langchain-core>=1.3.0",
    "langchain-openai>=1.2.0",
    "llvmlite==0.43.0",
    "numba==0.60.0",
    "numpy>=1.26.4,<2.0.0",
    "onnxruntime<1.24",
    "pandas>=2.3.3",
    "pdfminer>=20191125",
    "protobuf>=3.20,<4.0",
    "sentence-transformers>=3.4.1,<4.0",
    "tabulate>=0.10.0",
    "tokenizers>=0.21,<0.22",
    "transformers>=4.47.1,<5.0",
    "unstructured>=0.18.32",
]
